infra/dev/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: egg-backend-service
spec:
  selector:
    app: egg-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
