infra/dev/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: egg-backend-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - api.dev.egg.one
    secretName: egg-tls
  rules:
  - host: api.dev.egg.one
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: egg-backend-service
            port: 
              number: 80
